--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "logistio_erp",
+    "name": "backend boilerplate ",
     "version": "0.0.1",
-    "description": "Logistio Erp ",
+    "description": "backend boilerplate ",
     "main": "index.js",
     "scripts": {
         "start": "node dist/index.js",
